fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ ol li {
   text-align: left;
   font-weight: bold;
   width: 400px;
-  padding: 3px;
   font-size: 18px;
   padding-top: 1px;
   padding-right: 100px;
@@ -26,6 +25,7 @@ ol li {
 img {
   top: 0;
   width: 400px;
+  height:400px;
   max-width: 100%;
    background-color: rgba(100%, 100%, 100%, 50%);
    border: solid 5px;
@@ -33,14 +33,13 @@ img {
 body {
    display: flex;
    flex-wrap: wrap;
-   justify-content:center;
+   justify-content:space-around;
 }
 p {
-   width:800px;
-height:500px;
+   align-content: space-between;
+   width:400px;
+   height:500px;
+   padding:10px;
    border: solid 5px;
-   display: flex;
-   flex-wrap:wrap;
-   justify-content:flex-start;
-   padding: 3px;
+   font-size: 20px;
 }
